# iterative-loops-lab

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh
src/: main.cpp
src/includes/: check.hpp  iterative.hpp  loop-interations.hpp  print.hpp
src/modules/: loop-interations.cpp
src/utils/: check.cpp  iterative.cpp  print.cpp
